--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "repository": "https://github.com/startcoriny/LAW-IN_PROJECT.git",
   "author": "jimini <gjm0313@naver.com>",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
-    "prisma": "^5.9.1"
+    "prisma": "^5.9.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
