--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
