--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "aws-sdk": "^2.1557.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2",
     "nodemailer": "^6.9.9",
     "prisma": "^5.9.1",
     "winston": "^3.11.0"
